--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata:
   name: cowarking-configmap
 data:
-  DB_NAME: mydatabase
-  DB_USER: myuser
-  DB_HOST: cowarking-service
-  DB_PORT: 5432
+  DB_NAME: "mydatabase"
+  DB_USER: "myuser"
+  DB_HOST: "postgresql-service"
+  DB_PORT: "5432"
 ---
 apiVersion: v1
 kind: Secret
@@ -14,4 +14,4 @@ metadata:
   name: cowarking-secret
 type: Opaque
 data:
-   DB_PASSWORD=bXlwYXNzd29yZA==
+   DB_PASSWORD: "bXlwYXNzd29yZA=="
