--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -7,10 +7,10 @@ spec:
   selector:
     service: coworking
   ports:
-  - name: "5153"
+  - name: "5432"
     protocol: TCP
-    port: 5153
-    targetPort: 5153
+    port: 80
+    targetPort: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -30,18 +30,18 @@ spec:
     spec:
       containers:
       - name: coworking
-        image: <DOCKER_IMAGE_URI_FROM_ECR>
+        image: 408509770453.dkr.ecr.us-east-1.amazonaws.com/udacity:latest
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
-            path: /health_check
-            port: 5153
+            path: "/api"
+            port: 80
           initialDelaySeconds: 5
           timeoutSeconds: 2
         readinessProbe:
           httpGet:
-            path: "/readiness_check"
-            port: 5153
+            path: "/api"
+            port: 80
           initialDelaySeconds: 5
           timeoutSeconds: 5
         envFrom:
