--- a/deployment/postgresql-deployment.yaml
+++ b/deployment/postgresql-deployment.yaml
@@ -16,11 +16,30 @@ spec:
         image: postgres:latest
         env:
         - name: POSTGRES_DB
-          value: mydatabase
+          valueFrom:
+            configMapKeyRef:
+              name: cowarking-configmap
+              key: DB_NAME
         - name: POSTGRES_USER
-          value: myuser
+          valueFrom:
+            configMapKeyRef:
+              name: cowarking-configmap
+              key: DB_USER
         - name: POSTGRES_PASSWORD
-          value: mypassword
+          valueFrom:
+            secretKeyRef:
+              name: cowarking-secret
+              key: DB_PASSWORD
+        - name: POSTGRES_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: cowarking-configmap
+              key: DB_HOST
+        - name: POSTGRES_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: cowarking-configmap
+              key: DB_PORT
         ports:
         - containerPort: 5432
         volumeMounts:
