--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,11 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      
+      - echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"  # Print AWS_DEFAULT_REGION
+      - echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"  # Print AWS_ACCOUNT_ID
+      - ping -c 3 google.com  # Test network connectivity to a known host (e.g., google.com)
+      - curl -I https://aws.amazon.com/  
       - echo Logging into ECR
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
 
