--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,21 +4,16 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"  # Print AWS_DEFAULT_REGION
-      - echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"  # Print AWS_ACCOUNT_ID
-      - ping -c 3 google.com  # Test network connectivity to a known host (e.g., google.com)
-      - curl -I https://aws.amazon.com/  # Test network connectivity to AWS endpoints
-
+      - echo Logging into ECR
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
       - echo Starting build at `date`
-      - echo Building the Docker image...
-      - IMAGE_TAG="$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER"  # Use CODEBUILD_BUILD_NUMBER for the build number
-      - docker build -t $IMAGE_TAG .
-      - docker tag $IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
-
+      - echo Building the Docker image...          
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
       - echo Completed build at `date`
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
