--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo Starting build at `date`
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER khaled-projects/udacity/analytics/Dockerfile  # Use $CODEBUILD_BUILD_NUMBER as the tag
+      - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER .  # Use $CODEBUILD_BUILD_NUMBER as the tag
       - docker tag $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER  # Tagging the image
 
   post_build:
