--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,12 +10,11 @@ phases:
     commands:
       - echo Starting build at `date`
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .  # Use $IMAGE_TAG as the tag
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG  # Tagging the image
+      - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER .  # Use $CODEBUILD_BUILD_NUMBER as the tag
+      - docker tag $IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER  # Tagging the image
 
   post_build:
     commands:
       - echo Completed build at `date` 
       - echo Pushing the Docker image... 
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG   # Push the Docker image with $IMAGE_TAG
-``
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_BUILD_NUMBER  # Replace image tag with CodeBuild number
